--- a/admin/src/Components/Navbar/Navbar.css
+++ b/admin/src/Components/Navbar/Navbar.css
@@ -9,6 +9,8 @@
 }
 .nav-logo{
     width: 200px;
+    display: flex;
+    align-items: center;
 }
 .nav-profile{
     width: 75px;
@@ -18,6 +20,7 @@
         padding: 15px 30px;
     } 
     .nav-logo{
+        
         width: 150px;
     }
     .nav-profile{
